# Wotan

./: .env  .env.example  Cargo.toml  README.md
configuration/: base.yaml
migrations/: 20211020134913_users_table.sql
scripts/: init_db.sh  run.sh
src/: cli_args.rs  db_manager.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/configuration/: configuration.rs  crypto.rs  mod.rs
src/database/: mod.rs  pool.rs
src/handlers/: auth.rs  healthy_check.rs  mod.rs  user.rs
src/models/: user.rs
src/user/: handler.rs  mod.rs  model.rs  util.rs
src/user/service/: mod.rs  register.rs
