[package]
name = "downloaderserv"
version = "0.1.0"
authors = ["Yahor Poresh"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "downloaderserv"


[dependencies]
actix-web = "4.0.0-beta.4"
argonautica = { version = "0.2", features = ["simd"] }
config = "0.11.0"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.3"
eyre = "0.4"
futures = { version = "0.3", features = ["compat"] }
jsonwebtoken = "7.1"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] } #normal tracing
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4" #formatter for the subscriber
tracing-log = "0.1.2"
uuid = { version = "0.8", features = ["v4"] }


[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
