[package]
name = "Wotan"
version = "0.2.0"
authors = ["Yahor Poresh"]
edition = "2018"


[dependencies]
actix-web = "3.3.2"         ### A powerful, pragmatic, and extremely fast web framework for Rust :)     |
actix-identity = "0.3.0"    ### For construction cookie policy                                          | ---> For Building Server
futures = "0.3.17"          ### For asynchronous programming                                            |

dotenv = "0.15.0"           ### For enviroment variables from .env

diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono", "r2d2"] }#                   | ---> For DataBase 
r2d2 = "0.8.9"              ### Generic connection pool                                                 |

lazy_static = "1.4.0"       ### For declaring lazily evaluated statics
log = "0.4.14"              ### 1) Logging API and ->                                                   | ---> Tracing
env_logger ="0.9.0"         ### 2) Logger that can be configured via environment variables              |

serde = "1.0"               ### Framework                                                               |
serde_derive = "1.0"        ### Macros                                                                  | ---> Serialize / Deserialize
serde_json = "1.0"          ### Json                                                                    |

rand = "0.8.4"              ### Random                                                                  |
argon2rs = "0.2.5"          ### Password hashing                                                        | ---> Hashing / Tokens
jsonwebtoken = "7.2.0"      ### JWT                                                                     |

uuid = { version = "=0.8.2", features = ["serde", "v4"] }#                                              |
time = "0.2.10"#                                                                                         | ---> Default
chrono = { version = "0.4.19", features = ["serde"] }#                                                  |

structopt = "0.3"        ### Struct for Configurations